<resources>
    <string name="app_name">NBA Teams</string>
    <string name="actionSortByName">Sort By Name</string>
    <string name="actionSortByWins">Sort By Wins</string>
    <string name="actionSortByLosses">Sort By Losses</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>





    <string name="fullName">Name: %1$s</string>
</resources>