<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/teamsListFragment">

    <fragment
        android:id="@+id/teamsListFragment"
        android:name="com.dariushm2.thescore.view.teams_list.TeamsListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_TeamsListFragment_to_PlayersListFragment"
            app:destination="@id/playersListFragment" />
    </fragment>
    <fragment
        android:id="@+id/playersListFragment"
        android:name="com.dariushm2.thescore.view.team_page.PlayersListFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_list">

        <argument
            android:name="teamId"
            android:defaultValue="-1"
            app:argType="integer" />

    </fragment>
</navigation>